// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Celecoxib Integration Test parses celecoxib 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        "=",
        null,
        "=",
        null,
        "=",
        null,
      ],
      "offset": 0,
      "ringNumber": 1,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        "=",
        null,
        "=",
        null,
        null,
      ],
      "offset": 0,
      "ringNumber": 2,
      "size": 5,
      "substitutions": {
        "4": "N",
        "5": "N",
      },
      "type": "ring",
    },
    {
      "atoms": [
        "C",
        "F",
      ],
      "attachments": {
        "1": [
          {
            "atoms": [
              "F",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
          {
            "atoms": [
              "F",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
      ],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Celecoxib Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C']);
export const v2 = Ring({ atoms: 'C', size: 6, bonds: ['=', null, '=', null, '=', null] });
export const v3 = Ring({ atoms: 'C', size: 5, ringNumber: 2, bonds: ['=', null, '=', null, null] });
export const v4 = v3.substitute(4, 'N');
export const v5 = v4.substitute(5, 'N');
export const v6 = Linear(['C', 'F']);
export const v7 = Linear(['F']);
export const v8 = v6.attach(v7, 1);
export const v9 = Linear(['F']);
export const v10 = v8.attach(v9, 1);
export const v11 = Molecule([v1, v2, v5, v10]);"
`;

exports[`Meloxicam Integration Test parses meloxicam 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        "=",
        null,
        "=",
        null,
        null,
      ],
      "offset": 0,
      "ringNumber": 1,
      "size": 5,
      "substitutions": {
        "3": "N",
        "5": "S",
      },
      "type": "ring",
    },
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Meloxicam Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C']);
export const v2 = Ring({ atoms: 'C', size: 5, bonds: ['=', null, '=', null, null] });
export const v3 = v2.substitute(3, 'N');
export const v4 = v3.substitute(5, 'S');
export const v5 = Linear(['C']);
export const v6 = Molecule([v1, v4, v5]);"
`;

exports[`Piroxicam Integration Test parses piroxicam 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        null,
        "=",
        null,
        "=",
        null,
        "=",
        null,
        "=",
        null,
        "=",
        null,
      ],
      "offset": 0,
      "ringNumber": 1,
      "size": 11,
      "substitutions": {
        "1": "N",
        "10": "S",
        "11": "O",
      },
      "type": "ring",
    },
    {
      "atoms": [
        "C",
        "N",
      ],
      "attachments": {
        "1": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
      ],
      "type": "linear",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        "=",
        null,
        "=",
        null,
        "=",
        null,
      ],
      "offset": 0,
      "ringNumber": 3,
      "size": 6,
      "substitutions": {
        "6": "N",
      },
      "type": "ring",
    },
  ],
  "type": "molecule",
}
`;

exports[`Piroxicam Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C']);
export const v2 = Ring({ atoms: 'C', size: 11, bonds: [null, '=', null, '=', null, '=', null, '=', null, '=', null] });
export const v3 = v2.substitute(1, 'N');
export const v4 = v3.substitute(10, 'S');
export const v5 = v4.substitute(11, 'O');
export const v6 = Linear(['C', 'N']);
export const v7 = Linear(['O'], ['=']);
export const v8 = v6.attach(v7, 1);
export const v9 = Ring({ atoms: 'C', size: 6, ringNumber: 3, bonds: ['=', null, '=', null, '=', null] });
export const v10 = v9.substitute(6, 'N');
export const v11 = Molecule([v1, v5, v8, v10]);"
`;

exports[`Etodolac Integration Test parses etodolac 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "C",
      ],
      "attachments": {},
      "bonds": [
        null,
      ],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            "=",
            null,
            "=",
            null,
            "=",
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            "=",
            null,
            null,
            "=",
            null,
          ],
          "offset": 2,
          "ringNumber": 2,
          "size": 5,
          "substitutions": {
            "3": "N",
          },
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "6": [
              {
                "atoms": [
                  "C",
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            "=",
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 3,
          "size": 6,
          "substitutions": {
            "5": "O",
          },
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
    {
      "atoms": [
        "C",
        "C",
      ],
      "attachments": {},
      "bonds": [
        null,
      ],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Etodolac Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C']);
export const v2 = Linear(['C']);
v2.metaIsSibling = false;
export const v3 = Linear(['C']);
v3.metaIsSibling = false;
export const v4 = Linear(['O']);
v4.metaIsSibling = false;
export const v5 = Ring({ atoms: 'C', size: 6, bonds: ['=', null, '=', null, '=', null], branchDepths: [0, 0, 0, 0, 1, 1] });
export const v6 = v5.attach(v4, 6);
export const v7 = Ring({ atoms: 'C', size: 5, ringNumber: 2, offset: 2, bonds: ['=', null, null, '=', null] });
export const v8 = v7.substitute(3, 'N');
export const v9 = Ring({ atoms: 'C', size: 6, ringNumber: 3, bonds: ['=', null, null, null, null, null] });
export const v10 = v9.substitute(5, 'O');
export const v11 = Linear(['C', 'C']);
export const v12 = v10.attach(v11, 6);
export const v13 = FusedRing([v6, v8, v12]);
export const v14 = Linear(['C', 'C']);
export const v15 = Molecule([v1, v13, v14]);"
`;

exports[`Ketorolac Integration Test parses ketorolac 1`] = `
{
  "components": [
    {
      "atoms": [
        "O",
        "C",
      ],
      "attachments": {
        "2": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
      ],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 5,
          "substitutions": {
            "4": "N",
          },
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            null,
            "=",
            null,
            "=",
            null,
          ],
          "offset": 3,
          "ringNumber": 2,
          "size": 5,
          "substitutions": {
            "1": "N",
          },
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
    {
      "atoms": [
        "C",
      ],
      "attachments": {
        "1": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [],
      "type": "linear",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        "=",
        null,
        "=",
        null,
        "=",
        null,
      ],
      "offset": 0,
      "ringNumber": 3,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
  ],
  "type": "molecule",
}
`;

exports[`Ketorolac Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['O', 'C']);
export const v2 = Linear(['O'], ['=']);
export const v3 = v1.attach(v2, 2);
export const v4 = Ring({ atoms: 'C', size: 5 });
export const v5 = v4.substitute(4, 'N');
export const v6 = Ring({ atoms: 'C', size: 5, ringNumber: 2, offset: 3, bonds: [null, '=', null, '=', null] });
export const v7 = v6.substitute(1, 'N');
export const v8 = v5.fuse(v7, 3);
export const v9 = Linear(['C']);
export const v10 = Linear(['O'], ['=']);
export const v11 = v9.attach(v10, 1);
export const v12 = Ring({ atoms: 'C', size: 6, ringNumber: 3, bonds: ['=', null, '=', null, '=', null] });
export const v13 = Molecule([v3, v8, v11, v12]);"
`;

exports[`Rofecoxib Integration Test parses rofecoxib 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "S",
      ],
      "attachments": {
        "2": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
      ],
      "type": "linear",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        "=",
        null,
        "=",
        null,
        "=",
        null,
      ],
      "offset": 0,
      "ringNumber": 1,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
    {
      "atoms": "C",
      "attachments": {
        "3": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        "=",
        null,
        null,
        null,
        null,
      ],
      "offset": 0,
      "ringNumber": 2,
      "size": 5,
      "substitutions": {
        "4": "O",
      },
      "type": "ring",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        "=",
        null,
        "=",
        null,
        "=",
        null,
      ],
      "offset": 0,
      "ringNumber": 3,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
  ],
  "type": "molecule",
}
`;

exports[`Rofecoxib Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'S']);
export const v2 = Linear(['O'], ['=']);
export const v3 = v1.attach(v2, 2);
export const v4 = Linear(['O'], ['=']);
export const v5 = v3.attach(v4, 2);
export const v6 = Ring({ atoms: 'C', size: 6, bonds: ['=', null, '=', null, '=', null] });
export const v7 = Ring({ atoms: 'C', size: 5, ringNumber: 2, bonds: ['=', null, null, null, null] });
export const v8 = v7.substitute(4, 'O');
export const v9 = Linear(['O'], ['=']);
export const v10 = v8.attach(v9, 3);
export const v11 = Ring({ atoms: 'C', size: 6, ringNumber: 3, bonds: ['=', null, '=', null, '=', null] });
export const v12 = Molecule([v5, v6, v10, v11]);"
`;

exports[`Etoricoxib Integration Test parses etoricoxib 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        "=",
        null,
        "=",
        null,
        "=",
        null,
      ],
      "offset": 0,
      "ringNumber": 1,
      "size": 6,
      "substitutions": {
        "2": "N",
      },
      "type": "ring",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        "=",
        null,
        "=",
        null,
        "=",
        null,
      ],
      "offset": 0,
      "ringNumber": 2,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
    {
      "atoms": [
        "S",
      ],
      "attachments": {
        "1": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [],
      "type": "linear",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        "=",
        null,
        "=",
        null,
        "=",
        null,
      ],
      "offset": 0,
      "ringNumber": 3,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
  ],
  "type": "molecule",
}
`;

exports[`Etoricoxib Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C']);
export const v2 = Ring({ atoms: 'C', size: 6, bonds: ['=', null, '=', null, '=', null] });
export const v3 = v2.substitute(2, 'N');
export const v4 = Ring({ atoms: 'C', size: 6, ringNumber: 2, bonds: ['=', null, '=', null, '=', null] });
export const v5 = Linear(['S']);
export const v6 = Linear(['O'], ['=']);
export const v7 = v5.attach(v6, 1);
export const v8 = Linear(['O'], ['=']);
export const v9 = v7.attach(v8, 1);
export const v10 = Ring({ atoms: 'C', size: 6, ringNumber: 3, bonds: ['=', null, '=', null, '=', null] });
export const v11 = Molecule([v1, v3, v4, v9, v10]);"
`;

exports[`Nabumetone Integration Test parses nabumetone 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "O",
      ],
      "attachments": {},
      "bonds": [
        null,
      ],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            "=",
            null,
            "=",
            null,
            "=",
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            "=",
            null,
            null,
            null,
            "=",
            null,
          ],
          "offset": 2,
          "ringNumber": 2,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
    {
      "atoms": [
        "C",
        "C",
        "C",
        "C",
      ],
      "attachments": {
        "3": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
        null,
      ],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Nabumetone Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'O']);
export const v2 = Ring({ atoms: 'C', size: 6, bonds: ['=', null, '=', null, '=', null], branchDepths: [0, 0, 0, 1, 1, 1] });
export const v3 = Ring({ atoms: 'C', size: 6, ringNumber: 2, offset: 2, bonds: ['=', null, null, null, '=', null], branchDepths: [0, 0, 0, 1, 1, 1] });
export const v4 = v2.fuse(v3, 2);
export const v5 = Linear(['C', 'C', 'C', 'C']);
export const v6 = Linear(['O'], ['=']);
export const v7 = v5.attach(v6, 3);
export const v8 = Molecule([v1, v4, v7]);"
`;

exports[`Oxaprozin Integration Test parses oxaprozin 1`] = `
{
  "components": [
    {
      "atoms": [
        "O",
        "C",
        "C",
        "C",
      ],
      "attachments": {
        "2": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
        null,
      ],
      "type": "linear",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        "=",
        null,
        "=",
        null,
        null,
      ],
      "offset": 0,
      "ringNumber": 1,
      "size": 5,
      "substitutions": {
        "2": "N",
        "5": "O",
      },
      "type": "ring",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        "=",
        null,
        "=",
        null,
        "=",
        null,
      ],
      "offset": 0,
      "ringNumber": 3,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
  ],
  "type": "molecule",
}
`;

exports[`Oxaprozin Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['O', 'C', 'C', 'C']);
export const v2 = Linear(['O'], ['=']);
export const v3 = v1.attach(v2, 2);
export const v4 = Ring({ atoms: 'C', size: 5, bonds: ['=', null, '=', null, null] });
export const v5 = v4.substitute(2, 'N');
export const v6 = v5.substitute(5, 'O');
export const v7 = Ring({ atoms: 'C', size: 6, ringNumber: 3, bonds: ['=', null, '=', null, '=', null] });
export const v8 = Molecule([v3, v6, v7]);"
`;
